--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,6 +23,7 @@ const { title } = Astro.props;
 		<div class="h-full max-w-[1442px] mx-5 md:mx-10">
 			<slot />
 		</div>
+		<wc-toast position="bottom-right"></wc-toast>
 	</body>
 </html>
 <style is:global>
