chore: Send to production console log on contact form

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,6 +25,7 @@ import ContactForm from '@/sections/ContactForm.astro';
 		<BatteryChange></BatteryChange>
 		<ContactForm></ContactForm>
 		<OurMission></OurMission>
+		<Slider></Slider>
 		<Footer></Footer>
 	</main>
 </Layout>
