Fix: Edit all margins and paddings of the page, and change the distribution of the moblie menu

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,7 @@ import Whatsapp from "@/icons/Whatsapp.astro";
 
 const whatsappHref = "https://whatsapp.com/channel/0029VaDSD2mDp2QBrLhglU2x"
 ---
-<footer class="mt-6 md:mt-12 flex flex-col items-center justify-center gap-6 md:gap-12">
+<footer class="flex flex-col items-center justify-center gap-6 md:gap-12">
     <!-- <div class="flex flex-col items-center justify-center gap-3 md:gap-6 w-full">
         <h4 class="text-white font-semibold text-base md:text-xl">SUSCRIBETE A NUESTRA NEWSLETTER</h4>
         <p class="text-neutral-300 w-full text-center">Suscríbete a nuestro boletín para recibir noticias, actualizaciones gratuitas de contenido interesante y nuevos productos lanzados</p>
