--- a/src/sections/AboutUs.astro
+++ b/src/sections/AboutUs.astro
@@ -13,10 +13,10 @@ const images: ImgData[] = [
   { src: "/about-us-3.webp", alt: "Our Mission" },
 ];
 ---
-<section id="aboutUs" class="grid md:grid-cols-2 justify-items-center gap-2 md:gap-4 py-6 md:py-12 relative min-h-min overflow-visible">
-    <span class="flex flex-col gap-3 md:gap-6 md:sticky top-10 overflow-hidden h-fit">
+<section id="aboutUs" class="grid md:grid-cols-2 justify-items-center gap-4 md:gap-6 relative min-h-min overflow-visible">
+    <span class="flex flex-col gap-4 md:gap-6 md:sticky top-10 overflow-hidden h-fit">
         <h2 class="text-white text-xl md:text-3xl font-bold">Sobre Nosotros</h2>
-        <div class="flex flex-col gap-4 text-neutral-300 text-sm md:text-base">
+        <div class="flex flex-col gap-3 md:gap-4 text-neutral-300 text-sm md:text-base">
             <p>
                 Fundamos Fullrenew a finales de 2019, tras nuestra experiencia en una empresa de telefonía especializada en reacondicionamiento. Comenzamos con la venta al consumidor final (B2C) a través de plataformas ecommerce, y con el tiempo, hemos evolucionado para enfocarnos en el mercado mayorista (B2B) en toda Europa, distribuyendo iPhones reacondicionados a empresas y tiendas.
             </p>
@@ -43,7 +43,7 @@ const images: ImgData[] = [
         </div>
     </span>
     <div class="flex flex-col gap-2">
-        <span id="gallery" class="relative size-full flex flex-row md:flex-col md:gap-6 overflow-hidden">
+        <span id="gallery" class="relative size-full flex flex-row md:flex-col md:gap-4 overflow-hidden">
             {
                 images.map((image) => (
                     <img class="h-auto w-full aspect-video rounded-lg" src={image.src} alt={image.alt} />
