--- a/src/sections/CardsInfo.astro
+++ b/src/sections/CardsInfo.astro
@@ -17,7 +17,7 @@ const info = [
     }
 ]
 ---
-<section class="relative flex flex-row size-full min-h-[400px] justify-center py-6 md:py-12 overflow-auto 
+<section class="relative flex flex-row size-full min-h-[400px] justify-center overflow-auto 
 [&::-webkit-scrollbar-track]:bg-background [&::-webkit-scrollbar-thumb]:bg-secondary
 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar]:h-2">
     <div class="absolute inset-0 md:static grid grid-cols-3 w-[1296px] md:w-3/4 gap-12">
