--- a/src/sections/Slider.astro
+++ b/src/sections/Slider.astro
@@ -15,10 +15,10 @@ const logos: LogoData[] = [
   { src: "/nsysgroup-logo.webp", alt: "Logo NSYSGroup" },
   { src: "/fullrenew-logo.webp", alt: "Logo fullRenew" },
   { src: "/nsysgroup-logo.webp", alt: "Logo NSYSGroup" },
+  { src: "/fullrenew-logo.webp", alt: "Logo fullRenew" },
 ];
 ---
-<!-- Edit this section to get every logo element and do the animation from them. When the logo item goes to X -20% move the logo item to X 120% -->
-<section class="relative flex-row gap-4 md:gap-8 overflow-hidden whitespace-nowrap w-full py-6 md:py-12 text-secondary after:absolute after:top-0 after:w-52 after:h-full after:z-10 
+<section class="relative flex flex-row gap-4 md:gap-8 overflow-hidden whitespace-nowrap w-full h-12 text-secondary after:absolute after:top-0 after:w-52 after:h-full after:z-10 
     after:left-0 after:bg-gradient-to-l after:from-transparent after:to-neutral-900 before:absolute before:top-0 before:w-52 before:h-full before:z-10 
     before:right-0 before:bg-gradient-to-r before:from-transparent before:to-neutral-900">
     <span class="absolute w-auto top-0 left-0 flex flex-row justify-center items-end gap-8">
