--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,18 @@
 ---
 import Close from "@/icons/Close.astro";
 import Menu from "@/icons/Menu.astro";
+import Whatsapp from "@/icons/Whatsapp.astro";
+
+const whatsappMessage = {
+    url: 'https://wa.me/',
+    phone: '604846040',
+    text: 'Hola, quiero saber más sobre sus servicios'
+}
+
+const whatsappHref = `${whatsappMessage.url}${whatsappMessage.phone}?text=${whatsappMessage.text}`
 
 ---
-<header class="flex flex-row justify-between items-end py-4 md:py-8">
+<header class="flex flex-row justify-between items-end py-5 md:py-8">
     <img src="./fullrenew-logo.webp" alt="" class="w-40 h-auto">
     <nav class="hidden sm:flex flex-row items-center gap-4 text-secondary font-bold *:transition-all hover:*:text-primary hover:*:scale-105">
         <a href="/">Inicio</a>
@@ -14,15 +23,26 @@ import Menu from "@/icons/Menu.astro";
         <Menu class="w-8 h-auto aspect-square text-white"></Menu>
     </button>
     <dialog id="menu" class="inset-0 size-full bg-transparent backdrop-blur backdrop:bg-neutral-900/75 backdrop:backdrop-blur">
-        <span class="size-full flex flex-col justify-center items-center gap-16 text-secondary text-2xl font-bold hover:*:text-primary hover:*:scale-105 *:transition-all">
-            <!-- TODO: Disable autofocus on mobile menu -->
-            <a id="menuHome" href="/">Inicio</a>
-            <a id="menuAbout" href="#aboutUs">Sobre Nosotros</a>
-            <a id="menuContact" href="#contactUs">Contactanos</a>
-            <form method="dialog" class="size-fit">
-                <button><Close class="w-8 h-auto aspect-square cursor-pointer"></Close></button>
-            </form>
-        </span>
+        <section class="size-full flex flex-col justify-center items-center">
+            <span class="w-full flex justify-start">
+                <img src="./fullrenew-logo.webp" alt="" class="w-40 h-auto">
+            </span>
+            <span class="size-full flex flex-col justify-center items-start gap-16 text-secondary text-2xl font-bold hover:*:text-primary hover:*:scale-105 *:transition-all">
+                <!-- TODO: Disable autofocus on mobile menu -->
+                <a id="menuHome" href="/">Inicio</a>
+                <a id="menuAbout" href="#aboutUs">Sobre Nosotros</a>
+                <a id="menuContact" href="#contactUs">Contactanos</a>
+                <form method="dialog" class="size-fit">
+                    <button><Close class="w-8 h-auto aspect-square cursor-pointer"></Close></button>
+                </form>
+            </span>
+            <span class="w-full flex flex-row justify-end items-center p-4">
+                <a href={whatsappHref} target="_blank" rel="noreferrer" class="group/whatsapp flex flex-row items-center gap-2 bg-neutral-300 text-neutral-900 py-4 px-6 rounded-full size-fit hover:scale-105 hover:bg-whatsapp transition-all">
+                    <Whatsapp class="group-hover/whatsapp:text-primary"></Whatsapp>
+                    <p class="group-hover/whatsapp:text-primary text-sm font-bold">Contactanos</p>
+                </a>
+            </span>
+        </section>
     </dialog>
 </header>
 
