--- a/src/sections/ContactForm.astro
+++ b/src/sections/ContactForm.astro
@@ -1,11 +1,11 @@
 ---
 import Send from "@/icons/Send.astro";
 ---
-<section class="flex flex-col gap-3 md:gap-6 py-6 md:py-12">
+<section class="flex flex-col gap-3 md:gap-6">
     <div class="grid md:grid-cols-2 gap-8">
         <span class="relative grid place-items-center text-white font-bold">
             <img class="w-full h-auto aspect-video rounded-lg grayscale brightness-50" src="./OurMission.webp" alt="">
-            <div class="absolute inset-0 flex flex-col justify-center gap-3 md:gap-6 px-5 md:px-10 bg-gradient-to-t from-neutral-900 to-transparent">
+            <div class="absolute inset-0 flex flex-col justify-center gap-4 md:gap-6 px-5 md:px-10 bg-gradient-to-t from-neutral-900 to-transparent">
                 <h2 class="text-white text-xl md:text-3xl font-bold">Unamos fuerzas</h2>
                 <p class="text-neutral-300 text-sm md:text-base">Complete el siguiente formulario o visítenos en nuestra oficina en Vélez-Málaga para conversar
                     sobre cómo podemos colaborar en su próximo proyecto. Estaremos encantados de explorar oportunidades juntos y brindarle
