--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,5 +29,6 @@ const { title } = Astro.props;
 <style is:global>
 	html {
 		font-family: 'Inter Variable', system-ui, sans-serif;
+		scroll-behavior: smooth;
 	}
 </style>
