--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
 import Layout from '@/layouts/Layout.astro';
-import Header from '@/components/Header.astro';
+import Header from '@/sections/Header.astro';
 import Hero from '@/sections/Hero.astro';
-import Slider from '@/sections/Slider.astro';
+import Slider from '@/components/Slider.astro';
 import OurMission from '@/sections/OurMission.astro';
-import Footer from '@/components/Footer.astro';
+import Footer from '@/sections/Footer.astro';
 // import CardsInfo from '@/sections/CardsInfo.astro';
 import AboutUs from '@/sections/AboutUs.astro';
 import ContactUs from '@/sections/ContactUs.astro';
