--- a/src/sections/AboutUs.astro
+++ b/src/sections/AboutUs.astro
@@ -8,12 +8,11 @@ type ImgData = {
 };
 
 const images: ImgData[] = [
-  { src: "/about-us-1.webp", alt: "Our Mission" },
-  { src: "/about-us-2.webp", alt: "Our Mission" },
-  { src: "/about-us-3.webp", alt: "Our Mission" },
+  { src: "/about-us-1.webp", alt: "About Us Image" },
+  { src: "/about-us-2.webp", alt: "About Us Image" },
 ];
 ---
-<section id="aboutUs" class="grid md:grid-cols-2 justify-items-center gap-4 md:gap-6 relative min-h-min overflow-visible">
+<section id="aboutUs" class="grid md:grid-cols-2 justify-items-center gap-4 md:gap-6 relative min-h-min overflow-visible scroll-mt-32">
     <span class="flex flex-col gap-4 md:gap-6 md:sticky top-10 overflow-hidden h-fit">
         <h2 class="text-white text-xl md:text-3xl font-bold">Sobre Nosotros</h2>
         <div class="flex flex-col gap-3 md:gap-4 text-neutral-300 text-sm md:text-base">
