--- a/src/sections/Header.astro
+++ b/src/sections/Header.astro
@@ -1,7 +1,7 @@
 ---
 import Close from "@/icons/Close.astro";
 import Menu from "@/icons/Menu.astro";
-import Whatsapp from "@/icons/Whatsapp.astro";
+import WhatsAppButton from "@/components/WhatsAppButton.astro";
 
 const whatsappMessage = {
     url: 'https://wa.me/',
@@ -12,7 +12,7 @@ const whatsappMessage = {
 const whatsappHref = `${whatsappMessage.url}${whatsappMessage.phone}?text=${whatsappMessage.text}`
 
 ---
-<header class="flex flex-row justify-between items-end py-5 md:py-8">
+<header id="header" class="flex flex-row justify-between items-end py-5 md:py-8">
     <img src="./fullrenew-logo.webp" alt="" class="w-40 h-auto">
     <nav class="hidden sm:flex flex-row items-center gap-4 text-secondary font-bold *:transition-all hover:*:text-primary hover:*:scale-105">
         <a href="/">Inicio</a>
@@ -37,10 +37,9 @@ const whatsappHref = `${whatsappMessage.url}${whatsappMessage.phone}?text=${what
                 </form>
             </span>
             <span class="w-full flex flex-row justify-end items-center p-4">
-                <a href={whatsappHref} target="_blank" rel="noreferrer" class="group/whatsapp flex flex-row items-center gap-2 bg-neutral-300 text-neutral-900 py-4 px-6 rounded-full size-fit hover:scale-105 hover:bg-whatsapp transition-all">
-                    <Whatsapp class="group-hover/whatsapp:text-primary"></Whatsapp>
-                    <p class="group-hover/whatsapp:text-primary text-sm font-bold">Contactanos</p>
-                </a>
+                <WhatsAppButton whatsappHref={whatsappHref}>
+                    Saber Mas
+                </WhatsAppButton>
             </span>
         </section>
     </dialog>
