--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
@@ -29,6 +29,5 @@ const { title } = Astro.props;
 <style is:global>
 	html {
 		font-family: 'Inter Variable', system-ui, sans-serif;
-		scroll-behavior: smooth;
 	}
 </style>
