--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 // Supports weights 100-900
 import '@fontsource-variable/inter';
+import Analytics from '@vercel/analytics/astro'
 
 interface Props {
 	title: string;
@@ -24,6 +25,7 @@ const { title } = Astro.props;
 			<slot />
 		</div>
 		<wc-toast position="bottom-right"></wc-toast>
+		<Analytics />
 	</body>
 </html>
 <style is:global>
