--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,6 +26,7 @@ const { title } = Astro.props;
 		</div>
 		<wc-toast position="bottom-right"></wc-toast>
 		<Analytics />
+		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 	</body>
 </html>
 <style is:global>
