Fix: Justify orientation of contact us on battery change

--- a/src/sections/BatteryChange.astro
+++ b/src/sections/BatteryChange.astro
@@ -16,7 +16,7 @@ const whatsappHref = `${whatsappMessage.url}${whatsappMessage.phone}?text=${what
             <p class="text-neutral-300 text-sm md:text-base">Ofrecemos baterías con una salud renovada al 100%, listas para rendir al máximo. Utilizamos celdas de alta calidad, tecnología de soldadura láser y realizamos rigurosos tests de rendimiento para garantizar una durabilidad excepcional. Con nuestra amplia experiencia técnica, proporcionamos baterías que cumplen con los estándares más exigentes. Además, contamos con precios competitivos especialmente diseñados para empresas, asegurando una excelente relación calidad-precio.</p>
             <p class="text-neutral-300 text-sm md:text-base">Potencia tus dispositivos con la confianza de una batería que ofrece rendimiento y fiabilidad desde el primer momento, a un costo optimizado para tu negocio.</p>
         </div>
-        <span class="w-full flex flex-row justify-end">
+        <span class="w-full flex flex-row justify-end md:justify-start">
             <WhatsAppButton whatsappHref={whatsappHref}>
                 Contactanos
             </WhatsAppButton>
