--- a/src/sections/ContactForm.astro
+++ b/src/sections/ContactForm.astro
@@ -121,6 +121,7 @@ input[type=number] {
             });
 
             if (response.ok){
+                grecaptcha.reset();
                 toast.success("Mensaje enviado correctamente", {duration: 2500});
                 form.reset()
             }
