chore: Editing alt text to about us images

--- a/src/sections/AboutUs.astro
+++ b/src/sections/AboutUs.astro
@@ -8,8 +8,8 @@ type ImgData = {
 };
 
 const images: ImgData[] = [
-  { src: "/about-us-1.webp", alt: "About Us Image" },
-  { src: "/about-us-2.webp", alt: "About Us Image" },
+  { src: "/about-us-1.webp", alt: "About Us Office Area" },
+  { src: "/about-us-2.webp", alt: "About Us Technical Area" },
 ];
 ---
 <section id="aboutUs" class="grid md:grid-cols-2 justify-items-center gap-4 md:gap-6 relative min-h-min overflow-visible scroll-mt-32">
