Feat: Adding new sections to the page

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,7 +20,7 @@ const description = 'Telefonía reacondicionada'
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="bg-background grid place-items-center max-w-screen min-h-screen pb-16">
+	<body class="bg-background grid place-items-center max-w-screen min-h-screen pb-16 overflow-x-hidden">
 		<div class="h-full max-w-[1442px] mx-5 md:mx-10">
 			<slot />
 		</div>
