--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,9 @@ import ContactUs from '@/sections/ContactUs.astro';
 import BatteryChange from '@/sections/BatteryChange.astro';
 import UsedDevices from '@/sections/UsedDevices.astro';
 import ContactForm from '@/sections/ContactForm.astro';
+import MobileVariety from '@/sections/MobileVariety.astro';
+import Delivery from '@/sections/Delivery.astro';
+import MobileDegree from '@/sections/MobileDegree.astro';
 ---
 
 <Layout title="FullRenew">
@@ -21,8 +24,11 @@ import ContactForm from '@/sections/ContactForm.astro';
 		<!-- <CardsInfo></CardsInfo> -->
 		<AboutUs></AboutUs>
 		<UsedDevices></UsedDevices>
-		<ContactUs></ContactUs>
+		<MobileDegree></MobileDegree>
 		<BatteryChange></BatteryChange>
+		<ContactUs></ContactUs>
+		<MobileVariety></MobileVariety>
+		<Delivery></Delivery>
 		<ContactForm></ContactForm>
 		<OurMission></OurMission>
 		<Slider></Slider>
