Chore: Adding some gap between mobileDegrees

--- a/src/sections/MobileDegree.astro
+++ b/src/sections/MobileDegree.astro
@@ -1,9 +1,8 @@
 ---
 import Star from "@/icons/Star.astro";
 
-
 ---
-<section class="w-full flex flex-col md:flex-row justify-around">
+<section class="w-full flex flex-col md:flex-row justify-around gap-4">
     <div class="group/degree-a relative flex flex-col items-center gap-4">
         <h2 class="text-primary font-bold text-2xl group-hover/degree-a:[text-shadow:_1px_1px_5px_#d4d4d4]">Grado A</h2>
         <span class="text-secondary flex flex-col gap-1 group-hover/degree-a:text-primary transition-all">
