--- a/src/sections/Footer.astro
+++ b/src/sections/Footer.astro
@@ -30,13 +30,13 @@ const whatsappHref = "https://whatsapp.com/channel/0029VaDSD2mDp2QBrLhglU2x"
     <div class="flex flex-col items-center justify-center gap-3 md:gap-6 w-full">
         <h4 class="text-white font-semibold text-base md:text-xl">SIGUENOS EN NUESTRAS REDES SOCIALES</h4>
         <span class="flex flex-row justify-center w-full gap-8">
-            <a href="https://www.youtube.com/@fullRenew" target="_blank" rel="noreferrer">
+            <a href="https://www.youtube.com/@fullRenew" aria-label="YouTube Icon" target="_blank" rel="noreferrer">
                 <YouTube class="text-neutral-300 size-8 hover:scale-105 hover:text-white"></YouTube>
             </a>
-            <a href="https://www.instagram.com/fullrenew" target="_blank" rel="noreferrer">
+            <a href="https://www.instagram.com/fullrenew" aria-label="Instagram Icon" target="_blank" rel="noreferrer">
                 <Instagram class="text-neutral-300 size-8 hover:scale-105 hover:text-white"></Instagram>
             </a>
-            <a href="https://www.tiktok.com/@fullrenew" target="_blank" rel="noreferrer">
+            <a href="https://www.tiktok.com/@fullrenew" aria-label="TikTok Icon" target="_blank" rel="noreferrer">
                 <TikTok class="text-neutral-300 size-8 hover:scale-105 hover:text-white"></TikTok>
             </a>
         </span>
