--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import MobileDegree from '@/sections/MobileDegree.astro';
 	<main class="size-full flex flex-col gap-10 md:gap-20">
 		<Header></Header>
 		<Hero></Hero>
-		<Slider></Slider>
+		<Slider lazyLoading={false}></Slider>
 		<!-- <CardsInfo></CardsInfo> -->
 		<AboutUs></AboutUs>
 		<UsedDevices></UsedDevices>
@@ -31,7 +31,7 @@ import MobileDegree from '@/sections/MobileDegree.astro';
 		<Delivery></Delivery>
 		<ContactForm></ContactForm>
 		<OurMission></OurMission>
-		<Slider></Slider>
+		<Slider lazyLoading={true}></Slider>
 		<Footer></Footer>
 	</main>
 </Layout>
